@@ -3,3 +3,5 @@ brew 'cmake'
 brew 'openssl'
 brew 'ninja'
 brew 'googletest'
+brew 'tomlplusplus'
+brew 'cli11'
